--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
-  *= require_tree .
-  *= require bootstrap-without-forms
- *= require formtastic-plus-bootstrap
+ *= require_custom-theme .
+ * require_tree .
+ *= require bootstrap
+ * require bootstrap-without-forms
+ * require formtastic-plus-bootstrap
  */
