--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,9 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_custom-theme .
- * require_tree .
+ *= require normalize
  *= require bootstrap
+ *= require custom
  * require bootstrap-without-forms
  * require formtastic-plus-bootstrap
+ * require_custom-theme .
+ * require_tree .
+
  */
