--- a/app/views/bets/new.html.erb
+++ b/app/views/bets/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New bet</h1>
+<div class='container' style='background-color: #fffff3; padding: 25px 25px 25px 35px;'>
+
+<h1 class='lead' style='font-size:28px;'>New bet</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', bets_path %>
+
+</div>
