--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,23 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+
+<div class='container'>
+<div class="hero-unit" style="background-image: url('/assets/bob2.gif'); background-size: contain; background-repeat: no-repeat; margin: 0px 0 0 0;">
+<h1>Better Off Wed</h1>
+<p>Where we can all place bets on the life of an idiot</p>
+
+<% if user_signed_in? %>
+<a class='btn btn-large btn-success' href=<%= new_bet_path %>>Place Your Bet</a>
+<a class='btn btn-large btn-danger' href=<%= destroy_user_session_path %>>Sign Out</a>
+<% else %>
+<a class='btn btn-large btn-primary' href=<%= new_user_registration_path %>>Register</a>
+<a class='btn btn-large btn-warning' href=<%= new_user_session_path %>>Sign In</a>
+<% end %>
+</div>
+</div>
+
+
+
+
+
+
+     
