--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class='container'>
-<div class="hero-unit" style="background-image: url('/assets/bob.gif'); background-size: contain; background-repeat: no-repeat; margin: 0px 0 0 0;">
+<div class="hero-unit" style="background-image: url('/assets/bob2.gif'); background-size: contain; background-repeat: no-repeat; margin: 0px 0 0 0;">
 <h1>Better Off Wed</h1>
 <p>Where we can all place bets on the life of an idiot</p>
 
