--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *= require normalize
  *= require bootstrap
  *= require custom
+ *= require bets
+ * require formtastic_changes
  * require bootstrap-without-forms
  * require formtastic-plus-bootstrap
  * require_custom-theme .
