--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -5,7 +5,7 @@
 
 
   <% @bets.each do |bet| %>
-<div style='height: 250px; float: left; clear: top; margin: 10px; padding: 10px; background-color: #C2D1E0; border-radius: 15px;'>
+<div class='indexView'>
 
   <div class='lead'><%= bet.displayname %></div>
       <% if bet.EngagementDate == nil %>
