--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 
         <%# I need to add a the condition that looks to see if the current user has placed a bet yet and, if they have, give them a link to see their bet. %>
                   <% if Bet.exists?(current_user.bet_id) %>
-                    <%= link_to 'View Bet', bet_path(current_user.id) %> | 
+                    <%= link_to 'View Your Bet', bet_path(current_user.id) %> | 
+                    <%= link_to 'View All Bets', bets_path %> | 
                     <%= link_to 'Sign Out', destroy_user_session_path %> | 
                     <%= link_to "Home", root_path %> | 
                     <%= link_to 'About', about_path %> | 
