--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -10,7 +10,15 @@ The new wedding date will be: <%= @bet.NewWeddingDate %><br>
 Will they get a divorce: <%= @bet.WillDivorce %><br>
 They'll be divorced by the end of: <%= @bet.DivorceDate %><br>
 Will one of them kill the other: <%= @bet.OneDead %><br>
-Who will kill who: <%= @bet.WhoKillsWho %><br>
+Who will kill who: <%= @bet.WhoKillsWho %><br><br>
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="UQS9EX97NM84C">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
 
 
 
