wrote About and Help page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,18 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class='container' style='background-color: #fffff3; padding: 25px 25px 25px 35px;'>
+
+
+<p class='lead'>About this site</p>
+
+<div>
+<p>What is this site all about?  Two things, really. </p>
+
+<p>Firstly, it gave me the opportunity to finally utilize some of the programming skills I've been amassing over the last several months and actually do something with them. This site was built completely by hand using the <%= link_to 'Ruby on Rails', 'http://rubyonrails.org/' %> framework. </p>
+
+<p>Secondly, nothing makes me happier than to poke fun at the person who is the object of this site. Is it petty? Maybe. Is it small?  Sure. But I need at least one outlet for all of the frustration he creates.</p>
+
+</div>
+
+</div>
+
+<p>&nbsp</p>
+<p>&nbsp</p>
