--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,22 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<div class='container' style='background-color: #fffff3; padding: 25px 25px 25px 35px;'>
+
+
+<p class='lead'>Help</p>
+
+<div>
+
+  <p>It's easy: </p>
+
+  <ol>
+    <li><%= link_to 'Sign up', new_user_registration_path %> if you don't have an account or <%= link_to 'sign in',new_user_session_path %> if you do.</li>
+     <li>Place your bet by answering all of the questions and clicking the 'create bet' button.</li>
+     <li>Pay me.</li>
+     <li>Hope for the best.</li>
+   </ol>
+
+ </div>
+</div>
+
+<p>&nbsp</p>
+<p>&nbsp</p>
+
