--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require bootstrap
  *= require custom
  *= require bets
+ *= requre active_admin
  * require formtastic_changes
  * require bootstrap-without-forms
  * require formtastic-plus-bootstrap
