--- a/app/assets/stylesheets/bets.css.scss
+++ b/app/assets/stylesheets/bets.css.scss
@@ -26,6 +26,7 @@ You can use Sass (SCSS) here: http://sass-lang.com/ */
   border-radius: 15px;
 
 
+
 .legend  {
     border-bottom: 0px;
     
@@ -73,8 +74,9 @@ form-search select,
 }
 
 
-
-
-
-
 }
+
+.hide-me {
+  display: none;
+}
+
